# filetreematch

./: .gitignore  Cargo.toml  README.md
config/: ignore.toml.example
docs/superpowers/plans/: 2026-06-26-filetreematch.md
docs/superpowers/specs/: 2026-06-26-filetreematch-design.md
examples/: tui_profile.rs
src/: lib.rs  main.rs
src/analyze/: containment.rs  index.rs  maximal.rs  mod.rs
src/cli/: analyze.rs  export.rs  list.rs  mod.rs  scan.rs
src/config/: ignore.rs
src/db/: annotations.rs  directories.rs  files.rs  manifests.rs  mod.rs  query.rs  scans.rs  schema.sql  subset_pairs.rs
src/export/: mod.rs  script.rs
src/scan/: engine.rs  fingerprint.rs  mod.rs
src/tui/: app.rs  display.rs  mod.rs  ui.rs
tests/: analyze_integration.rs  analyze_validation.rs  containment_test.rs  db_schema_test.rs  export_integration.rs  fingerprint_test.rs  ignore_test.rs  list_pairs_test.rs  manifest_test.rs  maximal_test.rs  scan_integration.rs  tui_display_test.rs
tests/common/: mod.rs
