[package]
name = "filetreematch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "filetreematch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
crossterm = "0.28"
globset = "0.4"
indicatif = "0.17"
ratatui = "0.29"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
